tests/ui/closures/2229_closure_analysis/match/patterns-capture-analysis.stderr
error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:12:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:15:15
   |
LL |         match variant {
   |               ^^^^^^^
note: Capturing variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:15:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:12:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:15:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:31:5
   |
LL | /     || {
LL | |
LL | |         match variant {
LL | |             _ => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:50:5
   |
LL | /     || {
LL | |
LL | |         match variant {
LL | |             SingleVariant::Points(_) => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:64:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:67:15
   |
LL |         match variant {
   |               ^^^^^^^
note: Capturing variant[(0, 0)] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:67:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:64:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:67:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:84:5
   |
LL | /     || {
LL | |
LL | |         match array {
LL | |             [_,_,_] => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:96:5
   |
LL | /     || {
LL | |
LL | |         match array {
LL | |             [_, _, _] => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:109:5
   |
LL | /     || {
LL | |
LL | |         match f {
LL | |             Foo([_, _, _]) => ()
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:131:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:134:15
   |
LL |         match variant {
   |               ^^^^^^^
note: Capturing variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:134:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:131:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:134:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:150:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Capturing slice[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:153:15
   |
LL |         match slice {
   |               ^^^^^
note: Capturing slice[Deref] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:153:15
   |
LL |         match slice {
   |               ^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:150:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture slice[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:153:15
   |
LL |         match slice {
   |               ^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:163:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Capturing slice[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:166:15
   |
LL |         match slice {
   |               ^^^^^
note: Capturing slice[Deref] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:166:15
   |
LL |         match slice {
   |               ^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:163:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture slice[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:166:15
   |
LL |         match slice {
   |               ^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:176:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Capturing slice[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:179:15
   |
LL |         match slice {
   |               ^^^^^
note: Capturing slice[Deref] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:179:15
   |
LL |         match slice {
   |               ^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:176:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture slice[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:179:15
   |
LL |         match slice {
   |               ^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:194:5
   |
LL | /     || {
LL | |
LL | |         match slice {
LL | |             [..] => {},
...  |
LL | |     };
   | |_____^

error: aborting due to 18 previous errors

